<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fredi_background">

    <TextView
        android:id="@+id/Trajet"
        android:textSize="16dp"
        android:textColor="@color/colorBlank"


        android:text="@string/fraisTrajet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/trajet"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    ///////////////////
    <TextView
        android:id="@+id/Km"
        android:textColor="@color/colorBlank"
        android:textSize="17dp"

        android:text="@string/fraisKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/km"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    // /////////////////
    <TextView
        android:id="@+id/Peage"
        android:textColor="@color/colorBlank"

        android:textSize="17dp"
        android:text="@string/fraisPeage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/peage"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    //////////////////
    <TextView
        android:id="@+id/Repas"
        android:textColor="@color/colorBlank"

        android:textSize="17dp"
        android:text="@string/fraisRepas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/repas"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    //////////////////////
    <TextView
        android:id="@+id/Heberg"
        android:textColor="@color/colorBlank"

        android:textSize="17dp"
        android:text="@string/fraisHeberg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/heberg"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    //////////////////////
    <TextView
        android:id="@+id/Motif"
        android:textColor="@color/colorBlank"

        android:textSize="17dp"
        android:text="@string/fraisMotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/motif"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    /////////////////////
    <TextView
        android:id="@+id/Cout"
        android:text="@string/fraisCout"
        android:textColor="@color/colorBlank"
        android:textSize="17dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/cout"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>